# grayscaler

./: .gitignore  Cargo.toml  README.MD  package.json
public/: index.html  main.js  utils.js
src/: lib.rs
