[package]
name = "grayscaler"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21"
image = "0.24"
wasm-bindgen = "0.2"

[dependencies.web-sys]
version = "0.3"
features = ["console"]
